--- a/PDM/src/app/pages/login/login.page.html
+++ b/PDM/src/app/pages/login/login.page.html
@@ -15,6 +15,6 @@
   <form id="form">
     <app-input placeholder="Email"></app-input>
     <app-input type="password" placeholder="Password"></app-input>
-    <ion-button expand="block" shape="round">Login</ion-button>
+    <ion-button expand="block" shape="round" routerLink="/tabs/tab1">Login</ion-button>
   </form>
 </ion-content>
