--- a/PDM/src/app/pages/register/register.page.html
+++ b/PDM/src/app/pages/register/register.page.html
@@ -15,7 +15,7 @@
     <app-input placeholder="Your Name"></app-input>
     <app-input placeholder="Email"></app-input>
     <app-input type="password" placeholder="Password"></app-input>
-    <ion-button expand="block" shape="round">Join Us</ion-button>
+    <ion-button expand="block" shape="round" routerLink="/tabs/tab1">Join Us</ion-button>
   </form>
 
   <p>By pressing 'Join Us' you agree to <br />our terms & conditions.</p>
