--- a/PDM/src/app/components/header/header.component.html
+++ b/PDM/src/app/components/header/header.component.html
@@ -1,10 +1,6 @@
 <ion-header no-border translucent>
   <ion-toolbar color="primary">
-  <ion-buttons slot="start">
-    <ion-button color="primary">
-      <ion-back-button text="Log Out" icon="exit"></ion-back-button>
-    </ion-button>
-  </ion-buttons>
   <ion-title text-capitalize>{{title}}</ion-title>
+  <ion-button text="" href="/login" icon="exit" slot="end"></ion-button>
   </ion-toolbar>
 </ion-header>
