--- a/PDM/src/app/pages/tab3/tab3.page.html
+++ b/PDM/src/app/pages/tab3/tab3.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="title || 'Offers'"></app-header>
+<app-header [title]="title || 'Offers Applied'"></app-header>
 
 <ion-content [fullscreen]="true">
   <app-explore-container name="Tab 3 page"></app-explore-container>
