--- a/PDM/src/app/components/header/header.component.html
+++ b/PDM/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <ion-header no-border translucent>
   <ion-toolbar color="primary">
   <ion-title text-capitalize>{{title}}</ion-title>
-  <ion-button text="" href="/login" icon="exit" slot="end"></ion-button>
+  <ion-button href="/login" slot="end" color="primary"><ion-icon slot="icon-only" name="exit"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-header>
