--- a/PDM/src/app/pages/tab1/tab1.page.html
+++ b/PDM/src/app/pages/tab1/tab1.page.html
@@ -1,5 +1,16 @@
 <app-header [title]="title || 'News'"></app-header>
 
 <ion-content [fullscreen]="true">
-  <app-explore-container name="News Page"></app-explore-container>
+   <ion-list>
+   <ion-item *ngFor="let usuario of usuarios">
+     <ion-avatar slot="start">
+       <img [src]="usuario.picture.medium">
+     </ion-avatar>
+     <ion-label>
+     <h2>{{ usuario.name.first }}</h2>
+     <p>{{ usuario.email }}</p>
+   </ion-label>
+   </ion-item>
+ </ion-list>
+ <ion-button expand="block" (click) = "cargarUsuarios()">Cargar Usuarios</ion-button>
 </ion-content>
