--- a/PDM/src/app/pages/tab2/tab2.page.html
+++ b/PDM/src/app/pages/tab2/tab2.page.html
@@ -14,15 +14,15 @@
       </ion-card-content>
       <ion-footer>
         <ion-toolbar>
-         <ion-segment expand="full">
-          <ion-segment-button value="home">
-            <ion-icon name="home"></ion-icon>
+         <ion-segment swipeGesture="true" scrollable="true">
+          <ion-segment-button value="time">
+            <ion-icon name="time"></ion-icon>
           </ion-segment-button>
-          <ion-segment-button value="heart">
-            <ion-icon name="heart"></ion-icon>
+          <ion-segment-button value="eye">
+            <ion-icon name="eye"></ion-icon>
           </ion-segment-button>
-          <ion-segment-button value="pin">
-            <ion-icon name="pin"></ion-icon>
+          <ion-segment-button value="checkmark">
+            <ion-icon name="checkmark"></ion-icon>
           </ion-segment-button>
         </ion-segment>
         </ion-toolbar>
