--- a/PDM/src/app/pages/register/register.page.scss
+++ b/PDM/src/app/pages/register/register.page.scss
@@ -36,7 +36,7 @@ ion-toolbar {
   
     p {
       text-align: center;
-      color: #b6b6b6;
+      color: #00a4f8;
       margin-top: 40px;
     }
   }
