--- a/PDM/src/app/pages/tab2/tab2.page.html
+++ b/PDM/src/app/pages/tab2/tab2.page.html
@@ -29,5 +29,5 @@
       </ion-footer>
     </ion-card>
  </ion-list>
- <ion-button expand="block" (click) = "cargarUsuarios()">Cargar Usuarios</ion-button>
+ <ion-button expand="block" (click) = "loadOffers()">Cargar Usuarios</ion-button>
 </ion-content>
