--- a/PDM/src/app/pages/register/register.page.html
+++ b/PDM/src/app/pages/register/register.page.html
@@ -12,9 +12,12 @@
   <h1>Create your<br />Account</h1>
 
   <form id="form">
-    <app-input placeholder="Your Name"></app-input>
-    <app-input placeholder="Email"></app-input>
-    <app-input type="password" placeholder="Password"></app-input>
+    <app-input placeholder="Your Name" [(ngModel)]="user.name"></app-input>
+    <app-input placeholder="Your Surname" [(ngModel)]="user.surname"></app-input>
+    <app-input placeholder="Email" [(ngModel)]="user.email"></app-input>
+    <app-input type="password" placeholder="Password" [(ngModel)]="user.password"></app-input>
+    <app-input type="password" placeholder="Confirm Password" [(ngModel)]="user.c_password"></app-input>
+    <app-input type="password" placeholder="Cicle Id" [(ngModel)]="user.cycle_id"></app-input>
     <ion-button expand="block" shape="round" routerLink="/tabs/tab1">Join Us</ion-button>
   </form>
 
