--- a/PDM/src/app/pages/register/register.page.html
+++ b/PDM/src/app/pages/register/register.page.html
@@ -10,16 +10,31 @@
 
 <ion-content>
   <h1>Create your<br />Account</h1>
-
-  <form id="form">
-    <app-input placeholder="Your Name" [(ngModel)]="user.name"></app-input>
-    <app-input placeholder="Your Surname" [(ngModel)]="user.surname"></app-input>
-    <app-input placeholder="Email" [(ngModel)]="user.email"></app-input>
-    <app-input type="password" placeholder="Password" [(ngModel)]="user.password"></app-input>
-    <app-input type="password" placeholder="Confirm Password" [(ngModel)]="user.c_password"></app-input>
-    <app-input type="password" placeholder="Cicle Id" [(ngModel)]="user.cycle_id"></app-input>
-    <ion-button expand="block" shape="round" routerLink="/tabs/tab1">Join Us</ion-button>
-  </form>
+  <ion-item>
+    <ion-label position="floating">Name</ion-label>
+    <ion-input type="text" [(ngModel)]="name"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Surname</ion-label>
+    <ion-input type="text" [(ngModel)]="surname"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Email</ion-label>
+    <ion-input type="email" [(ngModel)]="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Password</ion-label>
+    <ion-input type="password" [(ngModel)]="password"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Confirm Password</ion-label>
+    <ion-input type="password" [(ngModel)]="c_password"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Ciclo id</ion-label>
+    <ion-input type="number" [(ngModel)]="cycle_id"></ion-input>
+  </ion-item>
+    <ion-button expand="block" shape="round" (click)="say()">Join Us</ion-button>
 
   <p>By pressing 'Join Us' you agree to <br />our terms & conditions.</p>
 </ion-content>
