--- a/PDM/src/app/pages/login/login.page.html
+++ b/PDM/src/app/pages/login/login.page.html
@@ -12,9 +12,13 @@
     <img src="assets/logo.png" />
   </div>
 
-  <form id="form">
-    <app-input placeholder="Email"></app-input>
-    <app-input type="password" placeholder="Password"></app-input>
-    <ion-button expand="block" shape="round" routerLink="/tabs/tab1">Login</ion-button>
-  </form>
+    <ion-item>
+    <ion-label position="floating">Email</ion-label>
+    <ion-input type="email" [(ngModel)]="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Password</ion-label>
+    <ion-input type="password" [(ngModel)]="password"></ion-input>
+  </ion-item>
+    <ion-button expand="block" shape="round" (click)="hacerLogin()">Login</ion-button>
 </ion-content>
