--- a/PDM/src/app/pages/tab1/tab1.page.html
+++ b/PDM/src/app/pages/tab1/tab1.page.html
@@ -6,6 +6,7 @@
     <ion-card>
   <ion-card-header>
     <ion-card-title>
+    <img src="assets/logos/{{noticia.image}}" width="50" height="50">
     {{ noticia.title }}
     </ion-card-title>
     <ion-card-subtitle>
