--- a/PDM/src/app/pages/tab2/tab2.page.html
+++ b/PDM/src/app/pages/tab2/tab2.page.html
@@ -4,8 +4,8 @@
   <ion-list>
    <ion-card *ngFor="let offer of offers">
     <ion-card-header>
-      <ion-card-subtitle>{{ offer.email }}</ion-card-subtitle>
-      <ion-card-title>{{ offer.name.first }}</ion-card-title>
+      <ion-card-title>{{ offer.headline }}</ion-card-title>
+      <ion-card-subtitle>{{ offer.description }}</ion-card-subtitle>
     </ion-card-header>
 
       <ion-card-content>
