--- a/PDM/src/app/pages/tab2/tab2.page.html
+++ b/PDM/src/app/pages/tab2/tab2.page.html
@@ -5,12 +5,10 @@
    <ion-card *ngFor="let offer of offers">
     <ion-card-header>
       <ion-card-title>{{ offer.headline }}</ion-card-title>
-      <ion-card-subtitle>{{ offer.description }}</ion-card-subtitle>
     </ion-card-header>
 
       <ion-card-content>
-        Keep close to Nature's heart... and break clear away, once in awhile,
-        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+       {{ offer.description }}
       </ion-card-content>
       <ion-footer>
         <ion-toolbar>
