--- a/PDM/src/app/pages/tab3/tab3.page.html
+++ b/PDM/src/app/pages/tab3/tab3.page.html
@@ -1,5 +1,5 @@
 <app-header [title]="title || 'Offers Applied'"></app-header>
 
 <ion-content [fullscreen]="true">
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <app-explore-container name="You don´t have any Offers Applied"></app-explore-container>
 </ion-content>
