--- a/PDM/src/app/pages/administrador/tabs/tabs.page.html
+++ b/PDM/src/app/pages/administrador/tabs/tabs.page.html
@@ -2,22 +2,22 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="page1">
-        <ion-icon name="copy"></ion-icon>
-      <ion-label>News2</ion-label>
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Users</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="page2">
-      <ion-icon name="construct"></ion-icon>
-      <ion-label>Offers2</ion-label>
+      <ion-icon name="bug-outline"></ion-icon>
+      <ion-label>Reports</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="page3">
-        <ion-icon name="thumbs-up"></ion-icon>
-      <ion-label>Offers Applied2</ion-label>
+      <ion-icon name="construct"></ion-icon>
+      <ion-label>Offers</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="page4">
-        <ion-icon name="thumbs-up"></ion-icon>
-      <ion-label>Offers Applied2</ion-label>
+      <ion-icon name="brush-outline"></ion-icon>
+      <ion-label>Graphs</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
