--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>page1</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header-admin [title]="title || 'News'"></app-header-admin>
 
 <ion-content>
 
