--- a/PDM/src/app/components/header-admin/header-admin.component.html
+++ b/PDM/src/app/components/header-admin/header-admin.component.html
@@ -1,6 +1,6 @@
 <ion-header no-border translucent>
   <ion-toolbar color="danger">
   <ion-title text-capitalize>{{title}}</ion-title>
-  <ion-button href="/login" slot="end" color="warning"><ion-icon slot="icon-only" name="exit"></ion-icon></ion-button>
+  <ion-button href="/login" slot="end" color="danger"><ion-icon slot="icon-only" name="exit"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-header>
