--- a/PDM/src/app/pages/administrador/page2/page2.page.html
+++ b/PDM/src/app/pages/administrador/page2/page2.page.html
@@ -1,5 +1,8 @@
 <app-header-admin [title]="title || 'Reports'"></app-header-admin>
 
 <ion-content>
-
+<ion-toolbar>
+  <ion-button color="danger" expand="full" shape="round">Offers <ion-icon slot="end" name="construct-outline"></ion-icon></ion-button>
+  <ion-button color="danger" expand="full" shape="round">Participants <ion-icon slot="end" name="person-outline"></ion-icon></ion-button>
+</ion-toolbar>
 </ion-content>
