--- a/PDM/src/app/pages/administrador/page4/page4.page.html
+++ b/PDM/src/app/pages/administrador/page4/page4.page.html
@@ -1,4 +1,4 @@
-<app-header-admin [title]="title || 'Graphics'"></app-header-admin>
+<app-header-admin [title]="title || 'Graphs'"></app-header-admin>
 
 <ion-content>
 
