--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -1,5 +1,19 @@
-<app-header-admin [title]="title || 'News'"></app-header-admin>
+<app-header-admin [title]="title || 'Users'"></app-header-admin>
 
 <ion-content>
-
+<ion-list>
+<ion-item-sliding>
+    <ion-item>
+      <ion-label>
+        Client
+      </ion-label>
+    </ion-item>
+    <ion-item-options>
+      <ion-item-option color="success">
+        <ion-icon slot="bottom" name="person-add"></ion-icon>
+        Activates
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-list>
 </ion-content>
