--- a/PDM/src/app/pages/administrador/tabs/tabs.page.html
+++ b/PDM/src/app/pages/administrador/tabs/tabs.page.html
@@ -12,7 +12,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="page3">
-      <ion-icon name="construct"></ion-icon>
+      <ion-icon name="construct-outline"></ion-icon>
       <ion-label>Offers</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="page4">
