--- a/PDM/src/app/pages/client/tab2/tab2.page.html
+++ b/PDM/src/app/pages/client/tab2/tab2.page.html
@@ -12,8 +12,44 @@
       <ion-label>All</ion-label>
       <ion-icon name="albums"></ion-icon>
     </ion-segment-button>
-    <ion-segment-button *ngFor="let offer of offers" (click)="loadOffers(offer.id)">
-      <ion-label>{{offer.cicle_id}}</ion-label>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Asir</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Automocion</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Comercio</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Dam</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Electricidad</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Frio</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Gestion</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Mecatronica</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Soldadura</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button (click)="loadOffers(cicle.id)">
+      <ion-label>Teleco</ion-label>
       <ion-icon name="browsers"></ion-icon>
     </ion-segment-button>
   </ion-segment>
