--- a/PDM/src/app/pages/administrador/page3/page3.page.html
+++ b/PDM/src/app/pages/administrador/page3/page3.page.html
@@ -1,5 +1,23 @@
 <app-header-admin [title]="title || 'Offers'"></app-header-admin>
+<ion-content [fullscreen]="true">
+  <ion-list>
+    <ion-item-sliding *ngFor="let offer of offers">
+      <ion-item>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ offer.headline }}</ion-card-title>
+          </ion-card-header>
 
-<ion-content>
-
+          <ion-card-content position="fixed">
+            {{ offer.description }}
+          </ion-card-content>
+        </ion-card>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option color="danger">
+          Delete
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
