--- a/PDM/src/app/pages/client/tab2/tab2.page.html
+++ b/PDM/src/app/pages/client/tab2/tab2.page.html
@@ -7,7 +7,7 @@
 
   <ion-list>
 
-  <ion-segment color="primary" [(ngModel)]="type" (ionChange)="segmentChanged($event)" scrollable>
+  <ion-segment color="primary" [(ngModel)]="type" scrollable>
     <ion-segment-button value="deposit" (click)="loadOffers()" checked>
       <ion-label>All</ion-label>
       <ion-icon name="albums"></ion-icon>
