--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -9,7 +9,7 @@
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option color="success">
+      <ion-item-option color="success" (click)="Activate(3)">
         <ion-icon slot="bottom" name="person-add"></ion-icon>
         Activates
       </ion-item-option>
