--- a/PDM/src/app/pages/administrador/page3/page3.page.html
+++ b/PDM/src/app/pages/administrador/page3/page3.page.html
@@ -13,7 +13,7 @@
           </ion-card-content>
         </ion-card>
       </ion-item>
-      <ion-item-options>
+      <ion-item-options (click)="deleteOffer( offer.id )">
         <ion-item-option color="danger">
           Delete
         </ion-item-option>
