--- a/PDM/src/app/pages/client/tab2/tab2.page.html
+++ b/PDM/src/app/pages/client/tab2/tab2.page.html
@@ -32,7 +32,7 @@
           <ion-segment-button value="eye" (click)="ViewMore(offer.id)">
             <ion-icon name="eye"></ion-icon>
           </ion-segment-button>
-          <ion-segment-button value="checkmark" (click)="Applied()">
+          <ion-segment-button value="checkmark" (click)="ApplyOffer(offer.id)">
             <ion-icon name="checkmark"></ion-icon>
           </ion-segment-button>
         </ion-segment>
