--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -2,16 +2,37 @@
 
 <ion-content>
 <ion-list>
-<ion-item-sliding>
+  <!-- <ion-card *ngFor="let offer of offers">
+    <ion-card-header>
+      <ion-card-title>{{ offer.headline }}</ion-card-title>
+    </ion-card-header>
+
+      <ion-card-content position="fixed">
+       {{ offer.description }}
+      </ion-card-content>
+      <ion-footer>
+        <ion-toolbar>
+         <ion-segment type="submit" swipeGesture="true" scrollable="true">
+          <ion-segment-button value="eye" (click)="ViewMore(offer.id)">
+            <ion-icon name="eye"></ion-icon>
+          </ion-segment-button>
+          <ion-segment-button value="checkmark" (click)="ApplyOffer(offer.id)">
+            <ion-icon name="checkmark"></ion-icon>
+          </ion-segment-button>
+        </ion-segment>
+        </ion-toolbar>
+      </ion-footer>
+    </ion-card> -->
+<ion-item-sliding *ngFor="let user of users">
     <ion-item>
       <ion-label>
-        Client
+        {{user.name}} {{user.surname}},  {{user.email}}
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option color="success" (click)="Activate(3)">
+      <ion-item-option color="success">
         <ion-icon slot="bottom" name="person-add"></ion-icon>
-        Activates
+          Activado
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
