--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -30,9 +30,13 @@
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option color="success">
+      <ion-item-option *ngIf="user.actived==0" color="success">
         <ion-icon slot="bottom" name="person-add"></ion-icon>
-          Activado
+          Activar
+      </ion-item-option>
+      <ion-item-option *ngIf="user.actived==1" color="danger">
+        <ion-icon slot="bottom" name="lock-closed-outline"></ion-icon>
+          Desactivar
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
