--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -23,20 +23,16 @@
         </ion-toolbar>
       </ion-footer>
     </ion-card> -->
-<ion-item-sliding *ngFor="let user of users">
-    <ion-item>
+<ion-item-sliding *ngFor="let user of users" >
+    <ion-item *ngIf="user.actived==0">
       <ion-label>
         {{user.name}} {{user.surname}},  {{user.email}}
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option *ngIf="user.actived==0" color="success">
+      <ion-item-option color="success">
         <ion-icon slot="bottom" name="person-add"></ion-icon>
           Activar
-      </ion-item-option>
-      <ion-item-option *ngIf="user.actived==1" color="danger">
-        <ion-icon slot="bottom" name="lock-closed-outline"></ion-icon>
-          Desactivar
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
