--- a/PDM/src/app/pages/client/tab2-modal/tab2-modal.page.html
+++ b/PDM/src/app/pages/client/tab2-modal/tab2-modal.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-item>
   <div *ngFor="let offer of offers">
-    <ion-label *ngIf="offer.id == 4">{{offer.headline}}</ion-label>
+    <ion-label *ngIf="offer.id == id">{{offer.headline}}</ion-label>
   </div>
   </ion-item>
 </ion-content>
