--- a/PDM/src/app/pages/client/tab3/tab3.page.html
+++ b/PDM/src/app/pages/client/tab3/tab3.page.html
@@ -2,14 +2,15 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-   <ion-item *ngFor="let offer of offers">
-    <ion-card>
-  <ion-card-header>
-    <ion-card-subtitle>
-    {{ offer.id }}
-    </ion-card-subtitle>
-  </ion-card-header>
-    </ion-card>
-   </ion-item>
- </ion-list>
+    <ion-item *ngFor="let offer of offers">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>{{ offer.headline }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content position="fixed">
+          {{ offer.description }}
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </ion-list>
 </ion-content>
