--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -30,7 +30,7 @@
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option color="success">
+      <ion-item-option color="success" (click)="Activate(user.id)">
         <ion-icon slot="bottom" name="person-add"></ion-icon>
           Activar
       </ion-item-option>
