--- a/PDM/src/app/pages/client/tab2/tab2.page.html
+++ b/PDM/src/app/pages/client/tab2/tab2.page.html
@@ -5,9 +5,7 @@
     <h1 class="ion-text-center">Requested offers: {{size}}</h1>
   </ion-item>
 
-    <ion-select [(ngModel)]="filter" (ionChange)="onChange($event)">
-      <ion-select-option *ngFor="let offer of offers" value="{{offer.cicle_id}}" name="browsers">{{offer.cicle_name}}</ion-select-option>
-    </ion-select>
+    <ion-searchbar placeholder="Search"></ion-searchbar>
 
   <ion-list>
 
