--- a/PDM/src/app/pages/administrador/page1/page1.page.html
+++ b/PDM/src/app/pages/administrador/page1/page1.page.html
@@ -31,8 +31,8 @@
     </ion-item>
     <ion-item-options>
       <ion-item-option color="success" (click)="Activate(user.id)">
-        <ion-icon slot="bottom" name="person-add"></ion-icon>
-          Activar
+        <ion-icon slot="bottom" name="person-add" *ngIf="user.actived"></ion-icon>
+          Activate
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
