--- a/PDM/src/app/pages/client/tab1/tab1.page.html
+++ b/PDM/src/app/pages/client/tab1/tab1.page.html
@@ -1,30 +1,37 @@
 <app-header [title]="title || 'News'"></app-header>
 
 <ion-content [fullscreen]="true">
+  
+  <ion-list>
+    <ion-label>Ver todas</ion-label>
+    <ion-checkbox checked="true" [(ngModel)]="check" (ionChange)="onChange()"></ion-checkbox>
+    <ion-item *ngFor="let noticia of noticias">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>
+            <img src="assets/logos/{{noticia.image}}" width="50" height="50" />
+            {{ noticia.title }}
+          </ion-card-title>
+          <ion-card-subtitle>
+            {{ noticia.cicle_name }}
+            <ion-datetime
+              disabled
+              displayFormat="DD/MM/YY"
+              value="{{ noticia.created_at }}"
+            ></ion-datetime>
+          </ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <p>{{ noticia.description }}</p>
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </ion-list>
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
-      loadingText="Loading more articles...">
-      <ion-list>
-        <ion-item *ngFor="let noticia of noticias">
-         <ion-card>
-       <ion-card-header>
-         <ion-card-title>
-         <img src="assets/logos/{{noticia.image}}" width="50" height="50">
-         {{ noticia.title }}
-         </ion-card-title>
-         <ion-card-subtitle>
-         {{ noticia.cicle_name }}
-         <ion-datetime disabled displayFormat="DD/MM/YY" value="{{ noticia.created_at }}"></ion-datetime>
-         </ion-card-subtitle>
-       </ion-card-header>
-       <ion-card-content>
-       <p >{{ noticia.description }}</p>
-       </ion-card-content>
-         </ion-card>
-        </ion-item>
-      </ion-list>
+      loadingText="Loading more articles..."
+    >
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
-   
 </ion-content>
