--- a/PDM/src/app/pages/client/tab3/tab3.page.html
+++ b/PDM/src/app/pages/client/tab3/tab3.page.html
@@ -2,7 +2,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item *ngFor="let offer of offers">
+    <ion-button color="primary" (click)="onPush()">Update</ion-button>
+    <ion-item-sliding *ngFor="let offer of offers">
+    <ion-item>
       <ion-card>
         <ion-card-header>
           <ion-card-title>{{ offer.headline }}</ion-card-title>
@@ -12,5 +14,11 @@
         </ion-card-content>
       </ion-card>
     </ion-item>
+    <ion-item-options (click)="unapply( offer.id )">
+      <ion-item-option color="danger">
+        Unapply
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
   </ion-list>
 </ion-content>
