--- a/PDM/src/app/pages/client/tab2/tab2.page.html
+++ b/PDM/src/app/pages/client/tab2/tab2.page.html
@@ -19,9 +19,16 @@
        HAY UN CICLO 
      </div>
     <ion-card-header>
-      <ion-card-title>{{ offer.headline }}</ion-card-title>
+    <ion-card-title>
+      <div *ngIf="offer.cicle_name === Automocion">
+        <img src="assets/logos/auto.png" width="50" height="50" />
+      </div>
+      <img src="assets/logos/{{offer.cicle_name | lowercase }}.png" width="50" height="50" />
+      {{ offer.headline }}
+    </ion-card-title>
+      
     </ion-card-header>
-
+    
       <ion-card-content position="fixed">
        {{ offer.description }}
       </ion-card-content>
