--- a/PDM/src/app/pages/client/tab1/tab1.page.html
+++ b/PDM/src/app/pages/client/tab1/tab1.page.html
@@ -22,7 +22,9 @@
           </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-          <p>{{ noticia.description }}</p>
+          <div *ngIf="noticia.description.length >= 30">
+            <p>{{ noticia.description }}</p>
+          </div>
         </ion-card-content>
       </ion-card>
     </ion-item>
