--- a/PDM/src/app/pages/client/tab3/tab3.page.html
+++ b/PDM/src/app/pages/client/tab3/tab3.page.html
@@ -14,9 +14,12 @@
         </ion-card-content>
       </ion-card>
     </ion-item>
-    <ion-item-options (click)="unapply( offer.id )">
-      <ion-item-option color="danger">
+    <ion-item-options >
+      <ion-item-option (click)="unapply( offer.id )" color="danger">
         Unapply
+      </ion-item-option>
+      <ion-item-option color="warning" (click)="ViewMore( offer.id )">
+        View More
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
