--- a/PDM/src/app/pages/client/tab3/tab3.page.html
+++ b/PDM/src/app/pages/client/tab3/tab3.page.html
@@ -8,12 +8,14 @@
       <ion-card>
         <ion-card-header>
           <ion-card-title>
-          <div *ngIf="offer.cicle_name === Automocion">
-            <img src="assets/logos/auto.png" width="50" height="50" />
-          </div>
-          <img src="assets/logos/{{offer.cicle_name | lowercase }}.png" width="50" height="50" />
-          {{ offer.headline }}
-        </ion-card-title>
+            <div *ngIf="offer.cicle_name === 'Automocion'; else elseBlock">
+              <img src="assets/logos/auto.png" width="50" height="50" />
+            </div>
+            <ng-template #elseBlock>
+            <img src="assets/logos/{{offer.cicle_name | lowercase }}.png" width="50" height="50" />
+            </ng-template>
+            {{ offer.headline }}
+          </ion-card-title>
         </ion-card-header>
         <ion-card-content position="fixed">
           {{ offer.description }}
