--- a/PDM/src/app/pages/client/tab1/tab1.page.html
+++ b/PDM/src/app/pages/client/tab1/tab1.page.html
@@ -22,7 +22,7 @@
           </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-            <p>{{ noticia.description | slice:0:30 }}</p>
+            <p>{{ noticia.description | slice:0:100 }} show more...</p>
         </ion-card-content>
       </ion-card>
     </ion-item>
