--- a/PDM/src/app/pages/client/tab1/tab1.page.html
+++ b/PDM/src/app/pages/client/tab1/tab1.page.html
@@ -22,9 +22,7 @@
           </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-          <div *ngIf="noticia.description.length >= 30">
-            <p>{{ noticia.description }}</p>
-          </div>
+          {{ noticia.description | text}}...
         </ion-card-content>
       </ion-card>
     </ion-item>
